SC24EP07 add new rest service 'feedback-service' add links between customer-application and feedback-service

--- a/customer-application/src/main/resources/templates/customer/products/product.html
+++ b/customer-application/src/main/resources/templates/customer/products/product.html
@@ -152,7 +152,7 @@
         <br>
         <label>
             Отзыв:<br>
-            <textarea name="content"></textarea>
+            <textarea name="content" th:text="${payload?.content}"></textarea>
         </label><br><br>
         <button type="submit">📩 Отправить отзыв</button>
     </form>
