--- a/manager-application/src/main/resources/templates/catalogue/products/list.html
+++ b/manager-application/src/main/resources/templates/catalogue/products/list.html
@@ -104,7 +104,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Список товаров</h1>
+    <h1>Список товаров FIVEорочка</h1>
 
     <form method="get" th:action="@{/catalogue/products/list}">
         <label>Найти:
